fixed the header spacing

--- a/style.scss
+++ b/style.scss
@@ -29,12 +29,13 @@ h1 {
     LAYOUTS
 */
 
-#header {
+.header {
     width: 100%;
     height: 110px;
     display: flex;
     flex-flow: row nowrap;
     border-bottom: 1px solid rgb(146, 146, 146);
+    justify-content: space-between;
 }
 #left-container {
     display: flex;
